--- a/Sources/Coherence/coherence_simple.tex
+++ b/Sources/Coherence/coherence_simple.tex
@@ -28,9 +28,9 @@ rules such as those in \cref{fig:subtype_decl}.
 If we permit ourselves to consider only the syntactic aspects of expressions,
 then very few expressions can be considered equal. The syntactic view also conflicts
 with the intuition that the significance of an expression lies in its
-contribution to the \textit{outcome} of a computation~\cite{Harper_2016}.
+contribution to the \textit{outcome} of a computation~\citep{Harper_2016}.
 Drawing inspiration from a wide range of literature on contextual
-equivalence~\cite{morris1969lambda}, we want a context-based notion of
+equivalence~\citep{morris1969lambda}, we want a context-based notion of
 coherence. It is helpful to consider several examples before presenting the
 formal definition of our new semantically-founded notion of coherence.
 
@@ -193,7 +193,7 @@ contextual equivalence directly, since it involves quantification over
 \textit{all} possible contexts. Worse still, two kinds of contexts are involved
 in \cref{thm:coherence}, which makes reasoning even more tedious. The key to
 simplifying the reasoning is to exploit types using logical
-relations~\cite{tait, statman1985logical, plotkin1973lambda}.
+relations~\citep{tait, statman1985logical, plotkin1973lambda}.
 
 
 \paragraph{In Search of a Logical Relation.}
@@ -260,7 +260,7 @@ $\valR{[[A]]}{[[A]]}$, and $\eeRR{[[A]]}$ for $\eeR{[[A]]}{[[A]]}$.
 
 % \begin{remark}
 %   The logical relations resemble those given by Biernacki and
-%   Polesiuk~\cite{biernacki2015logical}, as both are heterogeneous. However, two
+%   Polesiuk~\citep{biernacki2015logical}, as both are heterogeneous. However, two
 %   important differences are worth pointing out. Firstly, our value relation for
 %   product types ($\valR{[[T1 * T2]]}{[[T3]]}$ and $\valR{[[T3]]}{[[T1 * T2]]}$)
 %   is unusual. Secondly, their value relation disallows relating functions with
