--- a/Sources/Nested/algorithm.tex
+++ b/Sources/Nested/algorithm.tex
@@ -13,7 +13,7 @@ obtaining an algorithm is not available.
 %would be possible, the remaining rules are still highly overlapping, and pose
 %difficulties for an implementation.  
 Instead, we adapt \citeauthor{pierce1989decision}'s decision
-procedure~\cite{pierce1989decision} for a subtyping system (closely
+procedure~\citep{pierce1989decision} for a subtyping system (closely
 related to BCD) to obtain a sound and complete algorithm for our
 BCD extension. Our algorithm extends \citeauthor{pierce1989decision}'s decision
 procedure with subtyping of singleton records and
@@ -203,7 +203,7 @@ We show two lemmas about $\UU{[[A]]}$ that are crucial in the subsequent proofs.
 \end{proof}
 
 \begin{remark}
-  Lemma~\ref{lemma:set_trans} is not found in \citeauthor{pierce1989decision}'s proofs~\cite{pierce1989decision}, which is
+  Lemma~\ref{lemma:set_trans} is not found in \citeauthor{pierce1989decision}'s proofs~\citep{pierce1989decision}, which is
   crucial in Lemma~\ref{lemma:refl0}, from which reflexivity (Lemma~\ref{lemma:refl})
   follows immediately.
 \end{remark}
