--- a/Sources/Traits/conclusion.tex
+++ b/Sources/Traits/conclusion.tex
@@ -12,7 +12,7 @@ first-class traits interacts with features such as mutable state and recursive
 types. For mutable state, one immediate issue of supporting mutation is how it
 affects the coherence property of \fname, and we foresee major
 technical challenges to adjust the previous coherence proof. A more powerful proof method such as
-logical relations~\cite{xuan_nested, ahmed2004semantics} may be needed.
+logical relations~\citep{xuan_nested, ahmed2004semantics} may be needed.
 
 % \jeremy{future work}
 
