--- a/Sources/Nested/introduction.tex
+++ b/Sources/Nested/introduction.tex
@@ -2,25 +2,25 @@
 \section{Introduction}
 \label{sec:intro}
 
-Intersection types~\cite{pottinger1980type,coppo1981functional} have a long
+Intersection types~\citep{pottinger1980type,coppo1981functional} have a long
 history in programming languages. They were originally introduced to
 characterize exactly all strongly normalizing lambda terms. Since then,
 starting with Reynolds's work on
-Forsythe~\cite{reynolds1988preliminary}, they have also been employed
+Forsythe~\citep{reynolds1988preliminary}, they have also been employed
 to express useful programming language constructs, such as key
-aspects of \emph{multiple inheritance}~\cite{compagnoni1996higher} in
+aspects of \emph{multiple inheritance}~\citep{compagnoni1996higher} in
 Object-Oriented Programming (OOP). One notable
 example is the Scala
-language~\cite{odersky2004overview} and its DOT
-calculus~\cite{amin2012dependent}, which make fundamental use of intersection
+language~\citep{odersky2004overview} and its DOT
+calculus~\citep{amin2012dependent}, which make fundamental use of intersection
 types to express a class/trait that extends multiple other traits. Other
-modern languages, such as TypeScript~\cite{typescript}, Flow~\cite{flow} and
-Ceylon~\cite{ceylon}, also adopt some form of intersection types.
+modern languages, such as TypeScript~\citep{typescript}, Flow~\citep{flow} and
+Ceylon~\citep{ceylon}, also adopt some form of intersection types.
 
 Intersection types come in different varieties in the literature. Some calculi
 provide an \emph{explicit} introduction form for intersections, called the
-\emph{merge operator}. This operator was introduced by Reynolds in Forsythe~\cite{reynolds1988preliminary} and
-adopted by a few other calculi~\cite{Castagna_1992,
+\emph{merge operator}. This operator was introduced by Reynolds in Forsythe~\citep{reynolds1988preliminary} and
+adopted by a few other calculi~\citep{Castagna_1992,
   dunfield2014elaborating, oliveira2016disjoint, alpuimdisjoint}. Unfortunately,
 while the merge operator is powerful, it also makes it hard to get a \emph{coherent}
 (or unambiguous) semantics. 
@@ -31,7 +31,7 @@ where the same program can evaluate to different values.
 %Perhaps because of this
 %issue the merge operator has not been adopted by many language designs. 
 A far more common form of intersection types are the so-called \emph{refinement
-  types}~\cite{Freeman_1991, Davies_2000, dunfield2003type}. Refinement types
+  types}~\citep{Freeman_1991, Davies_2000, dunfield2003type}. Refinement types
 restrict the formation of intersection types so that the two types in an
 intersection are refinements of the same simple (unrefined) type. Refinement
 intersection increases only the expressiveness of types and not of terms. 
@@ -41,7 +41,7 @@ that require the merge operator (or an equivalent term-level operator).
 
 \paragraph{Disjoint Intersection Types.}
 \oname is a recent calculus with a variant of intersection types 
-called \emph{disjoint intersection types}~\cite{oliveira2016disjoint}.
+called \emph{disjoint intersection types}~\citep{oliveira2016disjoint}.
 Calculi with disjoint intersection types feature the merge 
 operator, with restrictions that all expressions in a merge 
 operator must have disjoint types and all well-formed intersections 
@@ -51,7 +51,7 @@ coherent.
 
 \begin{comment}
 The merge operator was introduced by Reynolds 
-and Forsythe and adopted by a few other calculi as well~\cite{}.
+and Forsythe and adopted by a few other calculi as well~\citep{}.
 Unfortunately, while the merge operator is powerful, it makes 
 it hard to get a \emph{coherent} semantics. \bruno{what is coherence}
 Perhaps because 
@@ -65,7 +65,7 @@ model subtyping}
 In essence disjoint intersection types retain most of the 
 expressive power of the merge operator.
 For example, they can 
-be used to model powerful forms of extensible records~\cite{}.
+be used to model powerful forms of extensible records~\citep{}.
 \end{comment}
 
 Disjoint intersection types have great potential to serve as a foundation for
@@ -78,14 +78,14 @@ coherence may seem at first of mostly theoretical relevance, it
 turns out to be very relevant for OOP. Multiple
 inheritance is renowned for being tricky to get right, largely because of the
 possible \emph{ambiguity} issues caused by the same field/method names
-inherited from different parents~\cite{bracha1990mixin, scharli2003traits}. Disjoint intersection types
+inherited from different parents~\citep{bracha1990mixin, scharli2003traits}. Disjoint intersection types
 enforce that the types of parents are disjoint and thus that no conflicts exist.
 Any violations are statically detected and can be manually resolved by the
 programmer.
 %(for example by dropping one
 %of the conflicting field/methods from one of the parents). 
 This is very similar
-to existing trait models~\cite{fisher2004typed,
+to existing trait models~\citep{fisher2004typed,
   ducasse2006traits}. Therefore in an OO language
 modelled on top of disjoint intersection types, coherence implies
 that no ambiguity arises from multiple inheritance. This makes
@@ -93,17 +93,17 @@ reasoning a lot simpler.
 
 \paragraph{Family Polymorphism.}
 One powerful and long-standing idea in OOP is \emph{family
-  polymorphism}~\cite{Ernst_2001}. In family polymorphism inheritance is
+  polymorphism}~\citep{Ernst_2001}. In family polymorphism inheritance is
 extended to work on a \emph{whole family of classes}, rather than just a single
 class. This enables high degrees of modularity and
 reuse, including simple solutions to hard programming language problems, like
-the Expression Problem~\cite{wadler1998expression}. An essential feature of
-family polymorphism is \emph{nested composition}~\cite{Corradi_2012,
+the Expression Problem~\citep{wadler1998expression}. An essential feature of
+family polymorphism is \emph{nested composition}~\citep{Corradi_2012,
   ErnstVirtual, Nystrom_2004}, which allows the automatic
 inheritance/composition of nested (or inner) classes when the top-level classes
 containing them are composed. Designing a sound type system that fully supports family
 polymorphism and nested composition is notoriously hard; there are only
-a few, quite sophisticated, languages that manage this~\cite{ErnstVirtual, Nystrom_2004, pubsdoc:tribe-virtual-calculus, SAITO_2007}.
+a few, quite sophisticated, languages that manage this~\citep{ErnstVirtual, Nystrom_2004, pubsdoc:tribe-virtual-calculus, SAITO_2007}.
 %To make matters worse, combining
 %multiple inheritance with family polymorphism requires dealing with the various
 %issues of both ideas.
@@ -114,10 +114,10 @@ This paper presents an improved variant of \oname called
   calcu\textbf{lus}.} (or \namee): a simple calculus with records and
 disjoint intersection types that supports \emph{nested composition}. Nested composition enables
 encoding simple forms of family polymorphism. More complex forms of
-family polymorphism, involving binary methods~\cite{bruce1995binary} and mutable state are
+family polymorphism, involving binary methods~\citep{bruce1995binary} and mutable state are
 not yet supported, but are interesting avenues for future work.
 Nevertheless, in \name, it is
-possible, for example, to encode Ernst's elegant family-polymorphism solution~\cite{Ernst_2001} to
+possible, for example, to encode Ernst's elegant family-polymorphism solution~\citep{Ernst_2001} to
 the Expression Problem. 
 Compared to \oname the essential novelty of \name are
 distributivity rules between function/record types and intersection
@@ -127,7 +127,7 @@ more powerful form supporting nested composition. The distributivity
 rule between function types and intersections is
 common in calculi with intersection types aimed at capturing the set
 of all strongly normalizable terms, and was first proposed by
-Barendregt et al.~\cite{Barendregt_1983} (BCD). However the
+Barendregt et al.~\citep{Barendregt_1983} (BCD). However the
 distributivity rule is not common in calculi or languages with intersection types
 aimed at programming. For example the rules employed in languages that
 support intersection types (such as Scala, TypeScript, Flow or Ceylon)
@@ -160,7 +160,7 @@ the calculus, such as the new subtyping rules required by the BCD system.
 
 In this work we remove the brittleness of the previous syntactic method to prove
 coherence, by employing a more semantic proof method based on \emph{logical
-  relations}~\cite{tait, plotkin1973lambda, statman1985logical}. This new proof method has several
+  relations}~\citep{tait, plotkin1973lambda, statman1985logical}. This new proof method has several
 advantages. Firstly, with the new proof method, several restrictions that were
 enforced by \oname to enable the syntactic proof method are removed. For example
 the work on \oname has to carefully distinguish between so-called \emph{top-like
@@ -207,7 +207,7 @@ calculus more easily extensible.
   and
   algorithmic subtyping rules with coercions, inspired by
   Pierce's decision
-  procedure~\cite{pierce1989decision}.
+  procedure~\citep{pierce1989decision}.
 
 \item A more powerful proof strategy for coherence of disjoint
   intersection types based on logical
@@ -218,7 +218,7 @@ of \emph{family polymorphism} through nested composition.
 
 \item A comprehensive Coq mechanization of all meta-theory. This has notably revealed
   several missing lemmas and oversights
-  in Pierce's manual proof~\cite{pierce1989decision} of BCD's algorithmic
+  in Pierce's manual proof~\citep{pierce1989decision} of BCD's algorithmic
   subtyping. % As a by-product, we obtain the first mechanically verified
   % BCD-style subtyping algorithm with coercions.
   We also have an implementation of a language built on top of \name; it runs and type-checks all examples shown in
@@ -227,7 +227,7 @@ of \emph{family polymorphism} through nested composition.
 
 \end{itemize}
 
-% Local Variables:
-% TeX-master: "../paper"
-% org-ref-default-bibliography: ../paper.bib
-% End:
+%%% Local Variables:
+%%% mode: latex
+%%% TeX-master: "../Thesis"
+%%% End:
